--- a/packages/frontend/i18n/src/resources/en.json
+++ b/packages/frontend/i18n/src/resources/en.json
@@ -835,8 +835,11 @@
   "com.affine.payment.billing-type-form.title": "Tell us your use case",
   "com.affine.payment.blob-limit.description.local": "The maximum file upload size for local workspaces is {{quota}}.",
   "com.affine.payment.blob-limit.description.member": "The maximum file upload size for this joined workspace is {{quota}}. You can contact the owner of this workspace.",
-  "com.affine.payment.blob-limit.description.owner.free": "{{planName}} users can upload files with a maximum size of {{currentQuota}}. You can upgrade your account to unlock a maximum file size of {{upgradeQuota}}.",
-  "com.affine.payment.blob-limit.description.owner.pro": "{{planName}} users can upload files with a maximum size of {{quota}}.",
+
+  "com.affine.payment.blob-limit.description.owner": "The maximum file upload size for this workspace is {{quota}}. To proceed, you can:",
+  "com.affine.payment.blob-limit.description.owner.tips-1": "Upgrade your account for larger file upload limits",
+  "com.affine.payment.blob-limit.description.owner.tips-2": "Upgrade the workspace plan to increase storage for all member",
+  "com.affine.payment.blob-limit.description.owner.tips-3": "Compress your file and upload again",
   "com.affine.payment.blob-limit.title": "You have reached the limit",
   "com.affine.payment.book-a-demo": "Book a demo",
   "com.affine.payment.buy-pro": "Buy Pro",
@@ -874,20 +877,20 @@
   "com.affine.payment.cloud.pro.name": "Pro",
   "com.affine.payment.cloud.pro.title.billed-yearly": "billed annually",
   "com.affine.payment.cloud.pro.title.price-monthly": "{{price}} per month",
-  "com.affine.payment.cloud.team.benefit.g1": "Both in Team & Enterprise",
-  "com.affine.payment.cloud.team.benefit.g1-1": "Everything in AFFiNE Pro.",
-  "com.affine.payment.cloud.team.benefit.g1-2": "Advanced permission control, page history and review mode.",
-  "com.affine.payment.cloud.team.benefit.g1-3": "Pay for seats, fits all team size.",
-  "com.affine.payment.cloud.team.benefit.g1-4": "Email & Slack support.",
-  "com.affine.payment.cloud.team.benefit.g2": "Enterprise only",
-  "com.affine.payment.cloud.team.benefit.g2-1": "SSO authorization.",
-  "com.affine.payment.cloud.team.benefit.g2-2": "Solutions & best practices for dedicated needs.",
-  "com.affine.payment.cloud.team.benefit.g2-3": "Embed-able & integrations with IT support.",
-  "com.affine.payment.cloud.team.description": "Best for scalable teams.",
-  "com.affine.payment.cloud.team.name": "Team / Enterprise",
-  "com.affine.payment.cloud.team.title": "Coming soon",
+  "com.affine.payment.cloud.team-workspace.benefit.g1": "Include in Team Workspace",
+  "com.affine.payment.cloud.team-workspace.benefit.g1-1": "Everything in AFFiNE Pro.",
+  "com.affine.payment.cloud.team-workspace.benefit.g1-2": "100 GB initial storage + 20 GB per seat.",
+  "com.affine.payment.cloud.team-workspace.benefit.g1-3": "500 MB of maximum file size.",
+  "com.affine.payment.cloud.team-workspace.benefit.g1-4": "Unlimited team members (10+ seats).",
+  "com.affine.payment.cloud.team-workspace.benefit.g1-5": "Multiple admin roles.",
+  "com.affine.payment.cloud.team-workspace.benefit.g1-6": "Priority customer support",
+  "com.affine.payment.cloud.team-workspace.description": "Best for scalable teams.",
+  "com.affine.payment.cloud.team-workspace.name": "Team Workspace",
+  "com.affine.payment.cloud.team-workspace.title.billed-yearly": "billed annually",
+  "com.affine.payment.cloud.team-workspace.title.price-monthly": "{{price}}/member/month",
   "com.affine.payment.contact-sales": "Contact sales",
   "com.affine.payment.current-plan": "Current plan",
+  "com.affine.payment.start-free-trial": "Start 14-day free trial",
   "com.affine.payment.discount-amount": "{{amount}}% off",
   "com.affine.payment.downgrade": "Downgrade",
   "com.affine.payment.downgraded-notify.content": "We'd like to hear more about where we fall short, so that we can make AFFiNE better.",
@@ -911,9 +914,11 @@
   "com.affine.payment.lifetime.purchased": "Purchased",
   "com.affine.payment.lifetime.title": "Believer Plan",
   "com.affine.payment.member-limit.free.confirm": "Upgrade",
-  "com.affine.payment.member-limit.free.description": "Each {{planName}} user can invite up to {{quota}} members to join their workspace. You can upgrade your account to unlock more members.",
+  "com.affine.payment.member-limit.description": "Workspaces created by {{planName}} users are limited to {{quota}} members. To add more collaborators, you can:",
+  "com.affine.payment.member-limit.description.tips-for-free-plan": "Upgrade to AFFiNE Pro for expanded member capacity",
+  "com.affine.payment.member-limit.description.tips-1": "Convert to a Team Workspace for unlimited collaboration",
+  "com.affine.payment.member-limit.description.tips-2": "Or create a new workspace",
   "com.affine.payment.member-limit.pro.confirm": "Got it",
-  "com.affine.payment.member-limit.pro.description": "Each {{planName}} user can invite up to {{quota}} members to join their workspace. If you want to continue adding collaboration members, you can create a new workspace.",
   "com.affine.payment.member-limit.title": "You have reached the limit",
   "com.affine.payment.member.description": "Manage members here. {{planName}} users can invite up to {{memberLimit}}",
   "com.affine.payment.member.description.choose-plan": "Choose your plan",
@@ -941,7 +946,8 @@
   "com.affine.payment.sign-up-free": "Sign up free",
   "com.affine.payment.storage-limit.description.member": "Cloud storage is insufficient. Please contact the owner of that workspace.",
   "com.affine.payment.storage-limit.description.owner": "Cloud storage is insufficient. You can upgrade your account to unlock more cloud storage.",
-  "com.affine.payment.storage-limit.title": "Sync failed",
+  "com.affine.payment.storage-limit.new-description.owner": "Unable to sync due to insufficient storage space. You can remove excess content, upgrade your account, or increase your workspace storage to resolve this issue.",
+  "com.affine.payment.storage-limit.new-title": "Sync failed due to storage space limit",
   "com.affine.payment.storage-limit.view": "View",
   "com.affine.payment.subtitle-active": "You are currently on the {{currentPlan}} plan. If you have any questions, please contact our <3>customer support</3>.",
   "com.affine.payment.subtitle-canceled": "You are currently on the {{plan}} plan. After the current billing period ends, your account will automatically switch to the Free plan.",
@@ -961,6 +967,8 @@
   "com.affine.payment.upgrade-success-page.support": "If you have any questions, please contact our <1> customer support</1>.",
   "com.affine.payment.upgrade-success-page.text": "Congratulations! Your AFFiNE account has been successfully upgraded to a Pro account.",
   "com.affine.payment.upgrade-success-page.title": "Upgrade successful!",
+  "com.affine.payment.upgrade-success-page.team.text-1": "Congratulations! Your workspace has been successfully upgraded to a Team Workspace. Now you can invite unlimited members to collaborate in this workspace.",
+  "com.affine.payment.upgrade-success-page.team.text-2": "If you have any questions, please contact our <1>customer support</1>.",
   "com.affine.peek-view-controls.close": "Close",
   "com.affine.peek-view-controls.open-doc": "Open this doc",
   "com.affine.peek-view-controls.open-doc-in-new-tab": "Open in new tab",
@@ -1486,5 +1494,20 @@
   "com.affine.editor.at-menu.import": "Import",
   "com.affine.editor.at-menu.more-docs-hint": "{{count}} more docs",
   "com.affine.editor.at-menu.journal": "Journal",
-  "com.affine.editor.at-menu.date-picker": "Select a specific date"
+  "com.affine.editor.at-menu.date-picker": "Select a specific date",
+  "com.affine.upgrade-to-team-page.title": "Empower Your Team with Seamless Collaboration",
+  "com.affine.upgrade-to-team-page.workspace-selector.placeholder": "Select an existing workspace or create a new one",
+  "com.affine.upgrade-to-team-page.workspace-selector.create-workspace": "Create Workspace",
+  "com.affine.upgrade-to-team-page.upgrade-button": "Upgrade to Team Workspace",
+  "com.affine.upgrade-to-team-page.benefit.title": "Team Workspace gives you everything you need for seamless team collaboration:",
+  "com.affine.upgrade-to-team-page.benefit.g1": "Invite unlimited members to your workspace",
+  "com.affine.upgrade-to-team-page.benefit.g2": "Set custom roles and permissions for better control",
+  "com.affine.upgrade-to-team-page.benefit.g3": "Access advanced team management features",
+  "com.affine.upgrade-to-team-page.benefit.g4": "Get priority customer support",
+  "com.affine.upgrade-to-team-page.upgrade-confirm.title": "Upgrade to Team Workspace",
+  "com.affine.upgrade-to-team-page.upgrade-confirm.description": "Are you sure you want to upgrade <1>{{workspaceName}}</1> to a Team Workspace? This will allow unlimited members to collaborate in this workspace.",
+  "com.affine.upgrade-to-team-page.create-and-upgrade-confirm.title": "Name Your Workspace",
+  "com.affine.upgrade-to-team-page.create-and-upgrade-confirm.description": "A workspace is your virtual space to capture, create and plan as just one person or together as a team.",
+  "com.affine.upgrade-to-team-page.create-and-upgrade-confirm.placeholder": "Set a workspace name",
+  "com.affine.upgrade-to-team-page.create-and-upgrade-confirm.confirm": "Continue to Pricing"
 }
